# careeros

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_GUIDE.md  MANIFEST.json  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent.yml  epic.yml  feature_request.yml  research.yml
.github/workflows/: ci.yml
apps/api/: main.py
docs/: agents.md  architecture.md  domain-model.md  governance.md  index.md  privacy.md  roadmap.md
docs/adr/: 0001-record-architecture-decisions.md  0002-use-clean-architecture-ddd-and-hexagonal-architecture.md  0003-use-knowledge-graph-plus-vector-search.md  0004-keep-careeros-independent-and-enable-future-interoperability.md  0005-use-opportunity-tailoring-engine-as-the-careeros-mvp.md
docs/architecture/: ai-governance.md  components.md  containers.md  context.md  data-flow.md  overview.md  security-architecture.md
docs/community/: community-roadmap.md  contributor-journey.md
docs/domain/: domain-model.md  evidence-and-provenance.md  evidence-schema.md  opportunity-schema.md  opportunity.md  professional-profile-schema.md  professional-profile.md  ubiquitous-language.md
docs/governance/: decision-process.md  funding-transparency.md  governance.md  maintainers.md  release-policy.md
docs/mvp/: upwork-sme-case-study.md
docs/open-collective/: readiness-checklist.md
schemas/: evidence.schema.json  opportunity.schema.json  professional-profile.schema.json
tests/: test_health.py
(+20 files in other folders)
