[project]
name = "careeros"
version = "0.1.0"
description = "Open source career intelligence platform"
requires-python = ">=3.11"
authors = [{ name = "SaaSCoop" }]
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
